--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -354,7 +354,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Vws-Yq-Wb2">
-                                <rect key="frame" x="16" y="438" width="288" height="52"/>
+                                <rect key="frame" x="16" y="430" width="288" height="52"/>
                                 <color key="backgroundColor" red="0.43824133209999999" green="0.46532846719999998" blue="0.66583029199999999" alpha="0.5" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Match">
                                     <color key="titleColor" white="1" alpha="0.95999999999999996" colorSpace="calibratedWhite"/>
@@ -900,9 +900,9 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="cSG-OH-O7d"/>
-        <segue reference="DyM-0b-ia2"/>
-        <segue reference="7CO-YD-a87"/>
         <segue reference="zio-dR-h1s"/>
-        <segue reference="KQA-JK-hdH"/>
+        <segue reference="7CO-YD-a87"/>
+        <segue reference="59u-uJ-ZJq"/>
+        <segue reference="niW-yG-t3L"/>
     </inferredMetricsTieBreakers>
 </document>
