--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -601,8 +601,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="8Fs-LL-xk0">
-                                <rect key="frame" x="67" y="356" width="187" height="159"/>
+                                <rect key="frame" x="75" y="363" width="171" height="159"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.4736899121" green="0.6686138506" blue="0.96326929210000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -631,7 +636,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Wishlist" id="HcB-Bg-M6S">
+                                    <navigationItem id="HcB-Bg-M6S">
                                         <barButtonItem key="leftBarButtonItem" style="plain" id="cSO-uI-T93">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="B0m-7Y-RoK">
                                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
@@ -832,7 +837,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Name" id="RZU-Dr-h1j">
+                                    <navigationItem id="RZU-Dr-h1j">
                                         <barButtonItem key="leftBarButtonItem" style="plain" id="4wa-ZW-iWJ">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="i3s-aI-hLm">
                                                 <rect key="frame" x="47" y="65" width="35" height="30"/>
@@ -899,8 +904,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="cSG-OH-O7d"/>
-        <segue reference="zio-dR-h1s"/>
+        <segue reference="hht-9x-lEI"/>
+        <segue reference="wBG-uc-FqG"/>
         <segue reference="7CO-YD-a87"/>
         <segue reference="59u-uJ-ZJq"/>
         <segue reference="KQA-JK-hdH"/>
